@@ -16,6 +16,9 @@
 	* src/paused.cpp
 	only continue if configured pause key is pressed
 	stop music playback (pausing the music is not implemented yet)
+	
+	* src/ppogl//audio/sound.cpp
+	partially fixed handling of non endless playback
 
 2005-09-26
 	* data/translations/de_DE.nut
